--- a/preview/index.html
+++ b/preview/index.html
@@ -1,29 +1,80 @@
 <html>
     <head>
-        <title>PMTiles Leaflet Example</title>
+        <title>PMTiles MapLibre Example</title>
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-        <script src="https://unpkg.com/leaflet@1.9.0/dist/leaflet.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css" crossorigin="anonymous">
+        <script src="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/pmtiles@2.11.0/dist/index.js"></script>
         <style>
-            body, #map {
-                height:100vh;
+            body {
                 margin: 0;
+            }
+            #map {
+                height:100%; width:100%;
             }
         </style>
     </head>
     <body>
         <div id="map"></div>
         <script type="text/javascript">
-            const map = L.map('map').setView([0, 0], 0);
+            // add the PMTiles plugin to the maplibregl global.
+            let protocol = new pmtiles.Protocol();
+            maplibregl.addProtocol("pmtiles",protocol.tile);
 
-            const p = new pmtiles.PMTiles("https://ctrepka.github.io/pmtiles_basemaps/my_area.pmtiles")
+            let PMTILES_URL = "https://ctrepka.github.io/pmtiles_basemaps/my_area.pmtiles";
+
+            const p = new pmtiles.PMTiles(PMTILES_URL);
+
+            // this is so we share one instance across the JS code and the map renderer
+            protocol.add(p);
+
+            // we first fetch the header so we can get the center lon, lat of the map.
             p.getHeader().then(h => {
-                let layer = pmtiles.leafletRasterLayer(p, {
-                    maxzoom:h.maxZoom,
-                    attribution:'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.'
+                const map = new maplibregl.Map({
+                    container: 'map',
+                    zoom: h.maxZoom-2,
+                    center: [h.centerLon, h.centerLat],
+                    style: {
+                        version:8,
+                        sources: {
+                            "example_source": {
+                                type: "vector",
+                                url: "pmtiles://" + PMTILES_URL,
+                                attribution: '© <a href="https://openstreetmap.org">OpenStreetMap</a>'
+                            }
+                        },
+                        layers: [
+                            {
+                                "id":"buildings",
+                                "source": "example_source",
+                                "source-layer":"landuse",
+                                "type": "fill",
+                                "paint": {
+                                    "fill-color": "steelblue"
+                                }
+                            },
+                            {
+                                "id":"roads",
+                                "source": "example_source",
+                                "source-layer":"roads",
+                                "type": "line",
+                                "paint": {
+                                    "line-color": "black"
+                                }
+                            },
+                            {
+                                "id":"mask",
+                                "source": "example_source",
+                                "source-layer":"mask",
+                                "type": "fill",
+                                "paint": {
+                                    "fill-color": "white"
+                                }
+                            }
+                        ]
+                    }
                 });
-                layer.addTo(map);
+                //map.showTileBoundaries = true;
             })
         </script>
     </body>
