--- a/preview/index.html
+++ b/preview/index.html
@@ -43,6 +43,7 @@
                                 attribution: '© <a href="https://openstreetmap.org">OpenStreetMap</a>'
                             }
                         },
+                        "glyphs": "http://fonts.openmaptiles.org/{fontstack}/{range}.pbf",
                         layers: [
   {
     "id": "background",
