--- a/preview/index.html
+++ b/preview/index.html
@@ -2486,7 +2486,7 @@
     "layout": {
       "symbol-placement": "line",
       "text-font": [
-        "Roboto Regular"
+        "Open Sans Regular"
       ],
       "text-field": [
         "get",
@@ -2514,7 +2514,7 @@
     ],
     "layout": {
       "text-font": [
-        "Roboto Italic"
+        "Open Sans Italic"
       ],
       "text-field": [
         "get",
@@ -2564,7 +2564,7 @@
       ],
       "symbol-placement": "line",
       "text-font": [
-        "Roboto Regular"
+        "Open Sans Regular"
       ],
       "text-field": [
         "get",
@@ -2599,7 +2599,7 @@
     ],
     "layout": {
       "text-font": [
-        "Roboto Medium"
+        "Open Sans Medium"
       ],
       "text-field": [
         "get",
@@ -2642,7 +2642,7 @@
     ],
     "layout": {
       "text-font": [
-        "Roboto Medium"
+        "Open Sans Medium"
       ],
       "text-field": [
         "get",
@@ -2693,7 +2693,7 @@
       ],
       "symbol-placement": "line",
       "text-font": [
-        "Roboto Regular"
+        "Open Sans Regular"
       ],
       "text-field": [
         "get",
@@ -2724,7 +2724,7 @@
       ],
       "text-field": "{name}",
       "text-font": [
-        "Roboto Regular"
+        "Open Sans Regular"
       ],
       "text-max-width": 7,
       "text-letter-spacing": 0.1,
@@ -2791,7 +2791,7 @@
         "pmap:min_zoom"
       ],
       "text-font": [
-        "Roboto Regular"
+        "Open Sans Regular"
       ],
       "text-field": [
         "get",
@@ -2872,13 +2872,13 @@
         [
           "literal",
           [
-            "Roboto Medium"
+            "Open Sans Medium"
           ]
         ],
         [
           "literal",
           [
-            "Roboto Regular"
+            "Open Sans Regular"
           ]
         ]
       ],
@@ -3111,7 +3111,7 @@
         ]
       ],
       "text-font": [
-        "Roboto Regular"
+        "Open Sans Regular"
       ],
       "text-size": [
         "interpolate",
@@ -3153,7 +3153,7 @@
       ],
       "text-field": "{name}",
       "text-font": [
-        "Roboto Medium"
+        "Open Sans Medium"
       ],
       "text-size": [
         "interpolate",
