--- a/preview/index.html
+++ b/preview/index.html
@@ -2599,7 +2599,7 @@
     ],
     "layout": {
       "text-font": [
-        "Open Sans Medium"
+        "Open Sans Regular"
       ],
       "text-field": [
         "get",
@@ -2642,7 +2642,7 @@
     ],
     "layout": {
       "text-font": [
-        "Open Sans Medium"
+        "Open Sans Regular"
       ],
       "text-field": [
         "get",
@@ -2872,7 +2872,7 @@
         [
           "literal",
           [
-            "Open Sans Medium"
+            "Open Sans Regular"
           ]
         ],
         [
@@ -3153,7 +3153,7 @@
       ],
       "text-field": "{name}",
       "text-font": [
-        "Open Sans Medium"
+        "Open Sans Regular"
       ],
       "text-size": [
         "interpolate",
